2007-09-22  Al Riddoch  <alriddoch@zepler.org>

	* tests/Objects/objects1.cpp: Remove a nasty C style cast that was
	  causing warnings.

2007-09-22  Al Riddoch  <alriddoch@zepler.org>

	* tests/Objects/objects1.cpp: Remove a nasty C style cast that was
	  causing warnings.

2007-09-02  Al Riddoch  <alriddoch@zepler.org>

	* Makefile.am, configure.ac: Remove the debian directory from
	  distribution.

2007-07-16  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac, Makefile.am: Add experimental debian packaging stuff.

2007-04-25  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/BaseObject.h: Add accessor for attribute flags, to
	  allow broader testing.

2007-04-01  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Codecs/Bach.cpp, Atlas/Codecs/Packed.cpp, Atlas/Codecs/XML.cpp:
	  Add C stdlib include to get atol. Not previously requires as some
	  compilers included this inside the STL headers.

	* Atlas/Net/Stream.cpp, Atlas/Codecs/Bach.cpp,
	  Atlas/Codecs/Packed.cpp, Atlas/Codecs/XML.cpp:
	  Re-code the parsing state machines for negotiation and codecs
	  so they are more efficient.

2007-01-12  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Message/Makefile.am: Remove Layer.h from the distribution.

2006-10-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/AttributeInfo.py, Atlas/Objects/GenerateDecoder.py,
	  Atlas/Objects/GenerateDispatcher.py,
	  Atlas/Objects/GenerateForward.py,
	  Atlas/Objects/GenerateObjectFactory.py, Atlas/Objects/common.py,
	  Atlas/Objects/flag.cpp, Atlas/Objects/gen_cpp.py:
	  Add RCS Id keywords to all python code generators, for better
	  version tracking.

2006-10-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Bridge.cpp, Atlas/Codec.cpp, Atlas/EncoderBase.cpp,
	  Atlas/Exception.cpp, Atlas/Factory.cpp, Atlas/Filter.cpp,
	  Atlas/Formatter.cpp, Atlas/Negotiate.cpp, Atlas/Codecs/Bach.cpp,
	  Atlas/Codecs/Packed.cpp, Atlas/Codecs/Utility.cpp,
	  Atlas/Codecs/XML.cpp, Atlas/Codecs/XMLish.cpp,