@@ -1,5 +1,10 @@
 2007-09-22  Al Riddoch  <alriddoch@zepler.org>
 
+	* tests/Objects/objects2.cpp: Remove a nasty C style cast that was
+	  causing warnings.
+
+2007-09-22  Al Riddoch  <alriddoch@zepler.org>
+
 	* tests/Objects/objects1.cpp: Remove a nasty C style cast that was
 	  causing warnings.
 
